--- a/13-Project - ETL/f_sql_analysis/sql_analysis.ipynb
+++ b/13-Project - ETL/f_sql_analysis/sql_analysis.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python379jvsc74a57bd0972b5e8961cf972370136eb15a5ce67c848ddf5ca1c37bd5b3d0153e753bc276",
+   "name": "python379jvsc74a57bd0ac5a4a8be39a6f36cb398e11c49d1d11aa42d9028028208279e8ac6ab225301c",
    "display_name": "Python 3.7.9 64-bit ('PythonData': conda)"
   }
  },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,15 +53,9 @@
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine, func, inspect\n",
     "\n",
-    "# Import database password\n",
-    "try:\n",
-    "    from postgres_pswd import host, database, username, passwd\n",
-    "    if host == 'YOUR DATABASE HOST HERE':\n",
-    "        sys.path.append(r\"C:\\Users\\nlund\\Documents\\GitHub\\untracked_files\")\n",
-    "        from postgres_remote import host, database, username, passwd\n",
-    "except:\n",
-    "    sys.path.append(r\"C:\\Users\\nlund\\Documents\\GitHub\\untracked_files\")\n",
-    "    from postgres_remote import host, database, username, passwd\n",
+    "\n",
+    "# Update the postgres_pswd.py file before you run the code. The file is in f_sql_analysis repository\n",
+    "from postgres_pswd import host, database, username, passwd\n",
     "\n",
     "# Create engine to mutual_funds database\n",
     "engine_startup = 'postgresql://' + username + \":\" + passwd + \"@\" + host + '/' + database\n",
@@ -70,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +75,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 155
+     "execution_count": 24
     }
    ],
    "source": [
@@ -97,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +136,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fund_name</th>\n      <th>total_market_value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Voya LargeCap Growth Portfolio</td>\n      <td>6.532219e+09</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Voya Russell LargeCap Index Portfolio</td>\n      <td>1.244100e+09</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Voya U.S. Stock Index Portfolio</td>\n      <td>7.917050e+09</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Voya LargeCap Value Portfolio</td>\n      <td>1.113767e+09</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Voya Index Plus LargeCap Portfolio</td>\n      <td>9.599116e+08</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 158
+     "execution_count": 27
     }
    ],
    "source": [
@@ -170,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +195,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fund_name</th>\n      <th>ticker</th>\n      <th>gics_sector</th>\n      <th>market_value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Voya Index Plus LargeCap Portfolio</td>\n      <td>ABT</td>\n      <td>Health Care</td>\n      <td>5016702.24</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Voya Index Plus LargeCap Portfolio</td>\n      <td>ABBV</td>\n      <td>Health Care</td>\n      <td>2232899.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Voya Index Plus LargeCap Portfolio</td>\n      <td>ACN</td>\n      <td>Information Technology</td>\n      <td>1238461.87</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Voya Index Plus LargeCap Portfolio</td>\n      <td>ADBE</td>\n      <td>Information Technology</td>\n      <td>6519968.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Voya Index Plus LargeCap Portfolio</td>\n      <td>AMD</td>\n      <td>Information Technology</td>\n      <td>606273.36</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 159
+     "execution_count": 28
     }
    ],
    "source": [
@@ -237,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +249,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sp500_market_value</th>\n    </tr>\n    <tr>\n      <th>fund_name</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Voya Index Plus LargeCap Portfolio</th>\n      <td>8.036399e+08</td>\n    </tr>\n    <tr>\n      <th>Voya LargeCap Growth Portfolio</th>\n      <td>5.540274e+09</td>\n    </tr>\n    <tr>\n      <th>Voya LargeCap Value Portfolio</th>\n      <td>9.717242e+08</td>\n    </tr>\n    <tr>\n      <th>Voya Russell LargeCap Index Portfolio</th>\n      <td>1.197636e+09</td>\n    </tr>\n    <tr>\n      <th>Voya U.S. Stock Index Portfolio</th>\n      <td>7.712523e+09</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 160
+     "execution_count": 29
     }
    ],
    "source": [
@@ -267,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +287,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>total_market_value_MM</th>\n      <th>sp500_market_value_MM</th>\n      <th>sp500_percentage</th>\n    </tr>\n    <tr>\n      <th>fund_name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Voya U.S. Stock Index Portfolio</th>\n      <td>7917.050</td>\n      <td>7712.523</td>\n      <td>97.42</td>\n    </tr>\n    <tr>\n      <th>Voya Russell LargeCap Index Portfolio</th>\n      <td>1244.100</td>\n      <td>1197.636</td>\n      <td>96.27</td>\n    </tr>\n    <tr>\n      <th>Voya LargeCap Value Portfolio</th>\n      <td>1113.767</td>\n      <td>971.724</td>\n      <td>87.25</td>\n    </tr>\n    <tr>\n      <th>Voya LargeCap Growth Portfolio</th>\n      <td>6532.219</td>\n      <td>5540.274</td>\n      <td>84.81</td>\n    </tr>\n    <tr>\n      <th>Voya Index Plus LargeCap Portfolio</th>\n      <td>959.912</td>\n      <td>803.640</td>\n      <td>83.72</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 161
+     "execution_count": 30
     }
    ],
    "source": [
@@ -320,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +360,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>sector_market_value_MM</th>\n      <th>sector_percentage</th>\n    </tr>\n    <tr>\n      <th>fund_name</th>\n      <th>gics_sector</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">Voya Index Plus LargeCap Portfolio</th>\n      <th>Information Technology</th>\n      <td>213.743</td>\n      <td>26.6</td>\n    </tr>\n    <tr>\n      <th>Health Care</th>\n      <td>119.579</td>\n      <td>14.9</td>\n    </tr>\n    <tr>\n      <th>Consumer Discretionary</th>\n      <td>105.477</td>\n      <td>13.1</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">Voya LargeCap Growth Portfolio</th>\n      <th>Information Technology</th>\n      <td>2513.144</td>\n      <td>45.4</td>\n    </tr>\n    <tr>\n      <th>Consumer Discretionary</th>\n      <td>1099.587</td>\n      <td>19.8</td>\n    </tr>\n    <tr>\n      <th>Communication Services</th>\n      <td>593.484</td>\n      <td>10.7</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">Voya LargeCap Value Portfolio</th>\n      <th>Financials</th>\n      <td>223.498</td>\n      <td>23.0</td>\n    </tr>\n    <tr>\n      <th>Health Care</th>\n      <td>137.534</td>\n      <td>14.2</td>\n    </tr>\n    <tr>\n      <th>Communication Services</th>\n      <td>101.679</td>\n      <td>10.5</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">Voya Russell LargeCap Index Portfolio</th>\n      <th>Information Technology</th>\n      <td>354.840</td>\n      <td>29.6</td>\n    </tr>\n    <tr>\n      <th>Health Care</th>\n      <td>163.470</td>\n      <td>13.6</td>\n    </tr>\n    <tr>\n      <th>Communication Services</th>\n      <td>159.930</td>\n      <td>13.4</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">Voya U.S. Stock Index Portfolio</th>\n      <th>Information Technology</th>\n      <td>2091.261</td>\n      <td>27.1</td>\n    </tr>\n    <tr>\n      <th>Health Care</th>\n      <td>1002.662</td>\n      <td>13.0</td>\n    </tr>\n    <tr>\n      <th>Consumer Discretionary</th>\n      <td>984.948</td>\n      <td>12.8</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 163
+     "execution_count": 20
     }
    ],
    "source": [
